--- a/frontend/src/css/homepage.css
+++ b/frontend/src/css/homepage.css
@@ -10,36 +10,12 @@
     --button-hover: #218739;
 }
 
-/* body {
-    scroll-behavior: smooth;
-    background: linear-gradient(90deg, rgba(7, 14, 227, 1) 0%, rgba(90, 109, 214, 1) 50%, rgba(135, 195, 230, 1) 100%);
-    color: var(--text-primary);
-    line-height: 1.6;
-} */
-
-a {
-    /*color: var(--link-color);*/
-    text-decoration: none;
-}
-
-a:hover {
-    /*color: var(--link-hover);*/
-    text-decoration: underline;
-}
-
-.container {
-    width: 90%;
-    max-width: 1100px;
-    margin: 0 auto;
-}
-
-.header {
-    /*background: linear-gradient(90deg, rgba(7, 14, 227, 1) 0%, rgba(90, 109, 214, 1) 50%, rgba(135, 195, 230, 1) 100%);*/
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 1rem 0;
     border-bottom: 1px solid var(--border-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 .logo {
@@ -146,24 +122,4 @@ a:hover {
     max-width: 700px;
     margin: 0 auto;
     line-height: 1.8;
-}
-
-.login {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: var(--bg-subtle, #f6f8fa);*/
-    text-align: center;
-    padding: 2rem;
-}
-
-.login-content h2 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-}
-
-.login-content p {
-    color: var(--text-secondary, #57606a);
-    margin-bottom: 2rem;
 }
