--- a/frontend/src/css/homepage.css
+++ b/frontend/src/css/homepage.css
@@ -1,13 +1,8 @@
 :root {
-    /*--bg-main: #0e0c31;*/
-    /*--bg-subtle: #1b154c;*/
     --border-color: #000000;
     --text-primary: #683ebd;
     --text-secondary: #ffffff5b;
     --link-color: #ffffff;
-    --link-hover: #ffffff;
-    --button-primary: #2da44e;
-    --button-hover: #218739;
 }
 
 header {
@@ -17,7 +12,10 @@ header {
     padding: 1rem 0;
     border-bottom: 1px solid var(--border-color);
 }
-
+.nav {
+    font-size: 14px;
+    color: #ffffff;
+}
 .logo {
     font-size: 1.5rem;
     font-weight: bold;
@@ -35,18 +33,12 @@ header {
 }
 
 .cta {
-    /*background: var(--button-primary);*/
     color: rgb(255, 255, 255);
     padding: 0.5rem 1rem;
     border-radius: 20px;
 }
 
-/*.cta:hover {
-    background: var(--button-hover);
-}*/
-
 .cta-large {
-    background: var(--button-primary);
     color: white;
     padding: 0.8rem 2rem;
     font-size: 1.1rem;
@@ -54,11 +46,7 @@ header {
     text-decoration: none;
 }
 
-.cta-large:hover {
-    background: var(--button-hover);
-}
-
-.features {
+/*.features {
     background: var(--bg-main);
     padding: 4rem 0;
     display: flex;
@@ -67,7 +55,7 @@ header {
     flex-wrap: wrap;
     border-top: 1px solid var(--border-color);
     border-bottom: 1px solid var(--border-color);
-}
+}*/
 
 .feature-box {
     width: 300px;
@@ -107,7 +95,6 @@ header {
 .section {
     padding: 5rem 1rem;
     text-align: center;
-    /*background: linear-gradient(90deg, rgba(7, 14, 227, 1) 0%, rgba(90, 109, 214, 1) 50%, rgba(135, 195, 230, 1) 100%);*/
     color: var(--text-primary, #24292f);
     border-bottom: 1px solid var(--border-color, #d0d7de);
 }
