--- a/frontend/src/css/learnPlace.css
+++ b/frontend/src/css/learnPlace.css
@@ -1,3 +1,13 @@
+body {
+    background:
+    linear-gradient(-90deg, rgba(79, 79, 79, 0.063) 1px, transparent 1px),
+    linear-gradient(rgba(79, 79, 79, 0.063) 1px, transparent 1px);
+    background-size: 24px 24px;
+    /* background-color: #030014; */
+    /* background-color: #211D43; */
+    background-color: #0f0e29;
+}
+
 /* Top head */
 header {
     color: white;
@@ -7,8 +17,10 @@ header {
     justify-content: center;
     width: 100%;
     height: 4em;
-    background-color: #06172B;
-    box-shadow: 2px 2px 22px rgba(0, 0, 0, 0.1);
+    /* background-color: #09213d; */
+    background-color: #1a134b;
+    /* box-shadow: 2px 2px 22px rgba(0, 0, 0, 0.1); */
+    box-shadow: 2px 2px 22px rgba(255, 255, 255, 0.107);
     z-index: 2;
 }
 .con-header {
