Complete theme toggle Make setting button work currectly

--- a/frontend/src/css/learnPlace.css
+++ b/frontend/src/css/learnPlace.css
@@ -1,4 +1,3 @@
-/* --dark, light ถูกเรียกใช้ใน learnPlace.js */
 :root {
     --dark-bg: #0f0e29;
     --dark-hd: rgba(26, 19, 75, 0.789);
@@ -9,11 +8,32 @@
 }
 
 body {
-    background:
-    linear-gradient(-90deg, rgba(79, 79, 79, 0.063) 1px, transparent 1px),
-    linear-gradient(rgba(79, 79, 79, 0.063) 1px, transparent 1px);
+    background: 
+        linear-gradient(-90deg, rgba(79, 79, 79, 0.063) 1px, transparent 1px),
+        linear-gradient(rgba(79, 79, 79, 0.063) 1px, transparent 1px);
     background-size: 24px 24px;
+    background-color: var(--dark-bg);
+    transition: background-color 500ms ease-in-out;
 }
+
+[data-theme='dark'] {
+    background-color: var(--dark-bg);
+}
+
+[data-theme='dark'] header {
+    background-color: var(--dark-hd);
+    box-shadow: 2px 2px 22px var(--dark-sh);
+}
+
+[data-theme='light'] {
+    background-color: var(--light-bg);
+}
+
+[data-theme='light'] header {
+    background-color: var(--light-hd);
+    box-shadow: 2px 2px 22px var(--light-sh);
+}
+
 
 /* Top head */
 header {
@@ -26,7 +46,10 @@ header {
     height: 4em;
     backdrop-filter: blur(26px);
     z-index: 2;
+    transition-property: background-color, box-shadow;
+    transition: 500ms ease-in-out;
 }
+
 .con-header {
     display: flex;
     flex-direction: row;
@@ -34,6 +57,7 @@ header {
     justify-content: space-between;
     width: 90%;
 }
+
 .open-menu {
     position: absolute;
     display: flex;
@@ -45,12 +69,14 @@ header {
     cursor: pointer;
     z-index: 1;
 }
+
 .open-menu::after {
     content: url('');
     position: absolute;
     width: 100%;
     height: 100%;
 }
+
 .open-menu .menu-btn-out {
     width: 25px;
     height: 3px;
@@ -58,6 +84,7 @@ header {
     background-color: #e2e2e2;
     transition: 500ms;
 }
+
 .open-menu .menu-btn-gruop {
     display: flex;
     flex-direction: row;
@@ -65,6 +92,7 @@ header {
     width: 100%;
     height: 3px;
 }
+
 .open-menu .menu-btn-in {
     width: 25px;
     height: 3px;
@@ -73,14 +101,17 @@ header {
     transition: 500ms;
     position: absolute;
 }
+
 .hdrmnbtn-open {
     animation: hdrmnbtn-open 0.5s forwards;
     animation-timing-function: cubic-bezier(0.895, 0.03, 0.685);
 }
+
 .hdrmnbtn-close {
     animation: hdrmnbtn-close 0.5s forwards;
     animation-timing-function: cubic-bezier(0.895, 0.03, 0.685);
 }
+
 @keyframes hdrmnbtn-open {
     20% {
         gap: 8px;
@@ -98,6 +129,7 @@ header {
         rotate: 45deg;
     }
 }
+
 @keyframes hdrmnbtn-close {
     0% {
         rotate: 45deg;
@@ -114,27 +146,39 @@ header {
         rotate: 0deg;
     }
 }
+
 .main-logo img {
     width: calc(1.8em * 2.2);
 }
+
 .search-container i {
     cursor: pointer;
     font-size: 28px;
     transition: transform 200ms;
 }
+
 .search-container i:hover {
     transform: scale(1.16);
 }
+
 .open-setting {
     cursor: pointer;
 }
+
 .open-setting i {
     align-self: center;
     font-size: 30px;
     color: #e2e2e2;
 }
 
-
+.Spin-n {
+    transition: transform 500ms;
+    transform: rotate(0deg);
+}
+.Spin-y {
+    transition: transform 500ms;
+    transform: rotate(360deg);
+}
 
 .search-result {
     position: fixed;
@@ -146,12 +190,14 @@ header {
     background-color: rgba(0, 85, 176, 0.949);
     z-index: 1;
 }
+
 .search-result .history-list {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+
 .search-result .history-list .word-container {
     display: flex;
     flex-direction: row;
@@ -163,13 +209,16 @@ header {
     font-family: sans-serif;
     color: #e2e2e2;
 }
+
 .search-result .history-list .word-container:last-child {
     border-bottom: none;
 }
+
 .word-container div:nth-child(1) {
     display: flex;
     flex-direction: row;
 }
+
 .word-container div:nth-child(2) {
     display: flex;
     flex-direction: row;
@@ -177,8 +226,8 @@ header {
 }
 
 
-
 /* Sidebar */
+
 #sideMenu {
     display: flex;
     flex-direction: column;
@@ -191,6 +240,7 @@ header {
     transition: transform 300ms;
     z-index: 1;
 }
+
 .user-info {
     display: flex;
     flex-direction: column;
@@ -200,6 +250,7 @@ header {
     font-size: clamp(1.2em, 2vw, 1.6em);
     box-sizing: content-box;
 }
+
 .user-container {
     align-self: center;
     width: 90%;
@@ -207,7 +258,9 @@ header {
     gap: .8em;
     display: flex;
     flex-direction: column;
+    cursor: default;
 }
+
 .user-container .user {
     display: flex;
     flex-direction: row;
@@ -215,34 +268,51 @@ header {
     justify-content: left;
     gap: .6em;
 }
+
 .user .avatar {
     display: flex;
     flex-direction: row;
+    cursor: pointer;
 }
-.user .avatar img  {
+
+.user .avatar img {
     width: clamp(50px, 8vw, 80px);
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
 }
+
 .user .name-usetime {
-    width: 50%;
+    width: 75%;
+    font-size: clamp(12px, 2vw, 24px);
 }
-.user .name-usetime .not-signin p {
+
+.user .name-usetime div p {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     font-size: clamp(12px, 2vw, 18px);
 }
+
 #navHead-txt {
     font-size: clamp(1.4em, 2vw, 2em);
     font-family: 'm_1mregular';
 }
+
 #usetime {
     display: flex;
     flex-direction: row;
     text-wrap: nowrap;
 }
+
 .stars {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
+
 .stars .learn-star {
     display: flex;
     align-items: center;
@@ -250,6 +320,7 @@ header {
     gap: .6em;
     padding: 0 clamp(25px, 6vw, 40px) 0 0;
 }
+
 .stars .learn-star img {
     width: clamp(18px, 6vw, 28px);
 }
@@ -267,24 +338,30 @@ header {
     font-family: 'm_1mregular';
     font-size: clamp(1.5em, 2vw, 2em);
 }
+
 .nav-bar::-webkit-scrollbar {
     width: 5px;
 }
+
 .nav-bar::-webkit-scrollbar-track {
     background: #292929;
 }
+
 .nav-bar::-webkit-scrollbar-thumb {
     background: #888;
     border-radius: 100px;
 }
+
 .nav-bar .typeNav {
     display: flex;
     flex-direction: column;
     padding: clamp(5px, 1.2vw, 10px);
 }
+
 .nav-bar .typeNav:not(:nth-child(3)) {
     border-bottom: solid 2px #787878;
 }
+
 .nav-bar .typeNav div {
     position: relative;
     cursor: pointer;
@@ -294,6 +371,7 @@ header {
     transform: translateX(-50%);
     transition: 300ms;
 }
+
 .iconBtn {
     display: flex;
     flex-direction: row;
@@ -301,10 +379,10 @@ header {
     gap: 1vw;
     margin: .6vw;
 }
+
 .iconBtn img {
     width: clamp(40px, 4vw, 50px);
 }
-
 
 
 /* Main */
@@ -320,9 +398,11 @@ header {
     max-width: 500px;
     gap: clamp(1.2em, 8vw, 5em);
 }
+
 .mainContent-container section {
     border-radius: 8px;
 }
+
 .schedule {
     display: flex;
     flex-direction: column;
@@ -335,6 +415,7 @@ header {
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
     border-radius: 8px;
 }
+
 .schedule .tell-streak {
     display: flex;
     flex-direction: row;
@@ -346,6 +427,7 @@ header {
     font-family: 'book_antiquaregular';
     color: #fff;
 }
+
 .schedule .tell-streak .streak-container {
     display: flex;
     flex-direction: column;
@@ -354,13 +436,16 @@ header {
     padding: clamp(5px, 1.2vw, 20px) 0;
     padding: 25px 0;
 }
+
 .schedule .tell-streak .streak-container p:nth-child(1) {
     color: #bbbbbb;
 }
+
 .schedule .tell-streak .streak-container p:nth-child(2) {
     color: #e2e2e2;
     font-size: 2.1em;
 }
+
 .showTableStr {
     display: flex;
     flex-direction: column;
@@ -368,6 +453,7 @@ header {
     /* height: 100%; */
     gap: 10px;
 }
+
 .tableRow {
     width: 90%;
     display: flex;
@@ -377,6 +463,7 @@ header {
     justify-content: space-between;
     gap: 10px;
 }
+
 .tableColumn {
     display: flex;
     align-items: center;
@@ -387,6 +474,7 @@ header {
     border-radius: 50%;
     box-sizing: content-box;
 }
+
 .tableColumn input {
     all: unset;
     width: 100%;
@@ -396,6 +484,7 @@ header {
     border-radius: 50%;
     transition: transform 1s;
 }
+
 .tableColumn i {
     position: absolute;
     color: #fff;
@@ -403,20 +492,20 @@ header {
     opacity: 0;
     transition: opacity 1s;
 }
+
 .tell-history {
     display: flex;
     align-items: center;
     justify-content: space-around;
     width: 100%;
 }
+
 .tell-history p {
     padding: clamp(30px, 5vw, 20px) 0;
     color: #e2e2e2;
     font-family: 'm_1mregular';
     font-size: clamp(12px, 6vw, 25px);
 }
-
-
 
 .lvl-review {
     display: flex;
@@ -431,6 +520,7 @@ header {
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
     padding: 20px clamp(12px, 2.2vw, 20px);
 }
+
 .charecter-box {
     display: flex;
     align-items: flex-start;
@@ -439,11 +529,13 @@ header {
     box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.3);
     border-radius: 10px 0 0 10px;
 }
+
 .charecter-box img {
     width: clamp(100px, 20vw, 160px);
     object-fit: contain;
     margin-left: -6%;
 }
+
 .textBox {
     display: flex;
     flex-direction: column;
@@ -458,19 +550,24 @@ header {
     line-height: 1.4;
     margin: 0;
 }
+
 .textBox::-webkit-scrollbar {
     width: 3px;
 }
+
 .textBox::-webkit-scrollbar-thumb {
     background: #3364c0;
 }
+
 .textBox::-webkit-scrollbar-track {
     background: #4c85f2;
 }
+
 .textBox .box1 {
     text-align: left;
     height: 100%;
 }
+
 .textBox .box2 {
     text-align: right;
 }
@@ -479,6 +576,7 @@ header {
     width: 100%;
     margin-top: 2em;
 }
+
 .level-show .level-current {
     display: flex;
     justify-content: space-between;
@@ -487,6 +585,7 @@ header {
     font-family: 'm_1mregular';
     font-size: clamp(16px, 2.8vw, 22px);
 }
+
 .level-show #UserLvl {
     width: 100%;
     height: 10px;
@@ -495,12 +594,15 @@ header {
     border-radius: 5px;
     overflow: hidden;
 }
+
 progress::-webkit-progress-bar {
     background-color: #afabab90;
 }
+
 progress::-webkit-progress-value {
     background: linear-gradient(to right, #4a37f6, #980CCC);
 }
+
 .progress-word {
     display: flex;
     justify-content: space-between;
@@ -513,37 +615,58 @@ progress::-webkit-progress-value {
     flex-shrink: 0;
     width: 100%;
 }
-.progress-word > div {
+
+.progress-word>div {
     flex: 1;
     padding: 6px 4px;
     border-radius: 6px;
     background-color: #e7e6e67e;
     font-size: clamp(6px, 2vw, 1em);
-    font-size: clamp(12px, 2.8vw, 18px); 
+    font-size: clamp(12px, 2.8vw, 18px);
     border-radius: clamp(2px, 1vw, 6px);
 }
-.progress-word > div p:nth-child(1) {
+
+.progress-word>div p:nth-child(1) {
     font-family: "Cascadia Code";
     font-size: 1.2em;
 }
-.progress-word > div p:nth-child(2) {
+
+.progress-word>div p:nth-child(2) {
     font-family: 'agencyfblightregular';
     text-wrap: nowrap;
 }
-.progress-word > div p:nth-child(2) span {
+
+.progress-word>div p:nth-child(2) span {
     opacity: 0;
     user-select: none;
 }
-.progress-0 {color: #50822f;}
-.progress-1 {color: #bb8c00;}
-.progress-2 {color: #d66c01;}
-.progress-3 {color: #c32509;}
-.progress-4 {color: #980DCC;}
+
+.progress-0 {
+    color: #50822f;
+}
+
+.progress-1 {
+    color: #bb8c00;
+}
+
+.progress-2 {
+    color: #d66c01;
+}
+
+.progress-3 {
+    color: #c32509;
+}
+
+.progress-4 {
+    color: #980DCC;
+}
+
 .revBtn_container {
     width: 100%;
     margin-top: 1.6em;
     text-align: center;
 }
+
 #reviewBtn {
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
     border: none;
@@ -557,14 +680,13 @@ progress::-webkit-progress-value {
     background: linear-gradient(135deg, #980CCC, #4690F6);
     transition: transform 200ms;
 }
+
 #reviewBtn span {
     font-size: clamp(12px, 5vw, 1.6em);
     font-family: 'm_1mregular';
     font-weight: bold;
     letter-spacing: 3px;
 }
-
-
 
 .Cam-Search {
     display: flex;
@@ -575,6 +697,7 @@ progress::-webkit-progress-value {
     gap: clamp(1em, 1.6vw, 1.6em);
     outline: none;
 }
+
 .Cam-Search button {
     all: unset;
     display: flex;
@@ -589,19 +712,20 @@ progress::-webkit-progress-value {
     cursor: pointer;
     transition: transform 200ms;
 }
+
 .Cam-Search button i {
     font-size: 1.2em;
 }
+
 .Cam-Search .searchBoxBtn {
     color: #767171;
     background-color: #292929;
 }
+
 .Cam-Search .cameraBoxBtn {
     color: #e2e2e2;
     background-color: #6e4adb;
 }
-
-
 
 .To-Signin {
     display: flex;
@@ -617,6 +741,7 @@ progress::-webkit-progress-value {
     gap: clamp(1em, 1.6vw, 1.6em);
     padding: 20px clamp(12px, 2.2vw, 20px);
 }
+
 .To-Signin div {
     display: flex;
     flex-direction: column;
@@ -624,7 +749,9 @@ progress::-webkit-progress-value {
     justify-content: center;
     gap: 1em;
 }
-.To-Signin div p, .To-Signin div span {
+
+.To-Signin div p,
+.To-Signin div span {
     display: flex;
     justify-content: space-between;
     color: #e2e2e2;
@@ -632,14 +759,17 @@ progress::-webkit-progress-value {
     font-family: 'm_1mregular';
     font-size: clamp(18px, 2.8vw, 25px);
 }
+
 .To-Signin .Backup-info div span {
     line-height: 50%;
     text-align: center;
     font-size: clamp(10px, 2.2vw, 18px);
 }
+
 .To-Signin button {
     padding: 15px 0;
 }
+
 .To-Signin button span {
     font-family: 'm_1mregular';
     font-size: clamp(18px, 2.8vw, 25px);
@@ -655,6 +785,7 @@ progress::-webkit-progress-value {
         margin: 2vw;
     }
 }
+
 @media (max-width: 481px) {
     #sideMenu {
         width: 100%;
@@ -675,6 +806,7 @@ progress::-webkit-progress-value {
         width: 100%;
     }
 }
+
 @media (orientation:landscape) {
     #sideMenu {
         max-width: 500px;
