--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -14,6 +14,11 @@ html {
     scroll-behavior: smooth;
 }
 
+img {
+    user-select: none;
+    -webkit-user-drag: none;
+}
+
 ::-webkit-scrollbar {
     width: 8px;
 }
