--- a/frontend/src/css/sub/searchbox.css
+++ b/frontend/src/css/sub/searchbox.css
@@ -9,30 +9,39 @@
     max-width: 575px;
     transform: translate(-50%, -50%);
 }
+.search-container i {
+    font-size: 22px;
+}
 .search-container div {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
+    /* background-color: red; */
 }
 .search-container .free-option {
     width: 30%;
     height: 32px;
-    font-size: 12px;
     color: #fafafa;
     box-sizing: border-box;
     padding: 0 8px;
     background-color: #06172b;
     border-radius: 0 15px 15px 0;
 }
+.input-place {
+    display: flex;
+    width: 100%;
+}
 .input-place .sideSearchSend {
     width: 15%;
     height: 32px;
     box-sizing: border-box;
     padding: 0 8px;
-    background-color: #06172b;
+    border: none;
     border-radius: 15px 0 0 15px;
+    color: #fafafa;
+    background-color: #06172b;
     cursor: pointer;
 }
 .input-place #search-box {
